--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </header>
   
   <main>
-    
+
     <section class="hero-area">
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
@@ -96,9 +96,12 @@
     <section class="reviews">
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
-        <img src="" alt="">
-        <p>LaCrue Bottling Co. October 2017</p><!--caption instead? or h?-->
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <article>
+          <div>
+            <h3>LaCrue Bottling Co. October 2017</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          </div>
+        </article>
       </div>
     </section>
 
@@ -110,8 +113,9 @@
         <div class="contact">
           <h4>Contact</h4>
           <address>
+            <p>
             555-555-5555<br>
-            <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+            <a href="mailto:hello@unplugged.com">hello@unplugged.com</a></p>
           </address>
         </div>
         <div class="social">
